Fix index.html template

--- a/configure/index.tmpl
+++ b/configure/index.tmpl
@@ -14,7 +14,7 @@
     <link href="dist/css/bootstrap.css" rel="stylesheet">
     <link href="dist/css/qwebirc.css" rel="stylesheet">
   <!-- /build -->
-  <!-- build:modules -->
+  <!-- build:script modules -->
     <script src="dist/js/modules.js"></script>
   <!-- /build -->
   <!-- build:script bundle  -->
