Correct ImagePopovers and make component

--- a/panes/options.hbs
+++ b/panes/options.hbs
@@ -21,11 +21,11 @@
                 </label>
             </div>
             <div class="controls">
-                <label class="checkbox" for="image_popout">
+                <label class="checkbox" for="image_popovers">
                     <a target="_blank" href="http://i.imgur.com/cMiwR5o.png">
                         {{lang "option.ENABLE_IMAGE_POPOUT"}}
                     </a>
-                    <input type="checkbox" id="image_popout" {{check image_popout}}>
+                    <input type="checkbox" id="image_popovers" {{check image_popovers}}>
                 </label>
             </div>
             <div class="controls">
