Correct? build; stop waiting on htmlbuild fix

--- a/configure/index.tmpl
+++ b/configure/index.tmpl
@@ -14,8 +14,8 @@
     <link href="dist/css/bootstrap.css" rel="stylesheet">
     <link href="dist/css/qwebirc.css" rel="stylesheet">
   <!-- /build -->
-  <!-- build:script modules -->
-    <script src="dist/js/modules.js"></script>
+  <!-- build:process modules -->
+    <script src="<%= getFileURL('modules') %>"></script>
   <!-- /build -->
   <!-- build:script bundle  -->
     <script src="dist/js/plugins.js"></script>
