Assorted authentication step improvements
Remove global qwebirc.auth
Use app level authentication. Requiring auth indicated by
`app.options.requireAuth`
Some other minor improvements to ICommands and Connection that aren't
worth noting

--- a/less/qwebirc/loginbox.less
+++ b/less/qwebirc/loginbox.less
@@ -4,6 +4,11 @@
     margin: 0 auto 5px;
 
 
+    &.hide-auth .auth {
+        display: none;
+        visibility: hidden;
+    }
+
     div {
         width: 385px;
         margin: .25em auto;
