--- a/templates/authpage.hbs
+++ b/templates/authpage.hbs
@@ -1,24 +1,26 @@
 <div class="container-fluid center">
-    <form class="login">
+    <form class="login {{#unless full}}hide-auth{{/unless}}">
         <h2>{{lang 'connectWelcome'}}</h2>
         <div class="control-group right">
             <label class="control-label" for="nickname">{{lang 'nickname'}}:
-                <input type="text" class="form-control" data-validate="nick" name="basic" id="nickname" value="{{nickname}}" placeholder="{{lang 'nickname'}}" required />
+                <input type="text" class="form-control" data-validate="nick" id="nickname" value="{{nickname}}" placeholder="{{lang 'nickname'}}" required />
             </label>
         </div>
-        <div class="control-group right {{#unless full}}hidden{{/unless}}">
+        <div class="control-group right auth">
             <label class="control-label" for="username">{{lang 'username'}}:
-                <input type="text" class="form-control" data-validate="username" name="full" id="username" value="{{username}}" placeholder="{{networkName}} {{lang 'username'}}">
+                <input type="text" class="form-control" data-validate="username" id="username" value="{{username}}" placeholder="{{networkName}} {{lang 'username'}}">
             </label>
         </div>
-        <div class="control-group right {{#unless full}}hidden{{/unless}}">
+        <div class="control-group right auth">
             <label class="control-label" for="password">{{lang 'password'}}:
-                <input type="password" class="form-control" data-validate="password" name="full" id="password" value="{{password}}">
+                <input type="password" class="form-control" data-validate="password" id="password" value="{{password}}">
             </label>
         </div>
+        {{#unless requireAuth}}
         <div class="authenticate">
             <label for="authenticate">{{lang 'enableAuth'}}<input type="checkbox" id="authenticate" {{check full}}></label>
         </div>
+        {{/unless}}
         <div>
             <input type="submit" value="Connect" class="btn btn-primary btn-smaller" />
         </div>
