--- a/less/qwebirc/qui.less
+++ b/less/qwebirc/qui.less
@@ -71,7 +71,7 @@
     .show-nicklist .leftpanel {
         position: absolute;
         left: 0;
-        right: 140px;
+        right: 150px;
     }
 
     .properties {
@@ -88,7 +88,7 @@
 
         .rightpanel {
             position: absolute;
-            width: 140px;
+            width: 150px;
             right: 0;
         }
 
@@ -181,6 +181,18 @@
         .nickname {
             color: #524F50;
             font-size: 14px;
+        }
+    }
+
+    .nicklist .user {
+        padding: 3px;
+
+        &:hover, &.selected {
+            padding: 4px 4px;
+            color: #555555;
+            background: #eeeeee;
+            border: 1px solid #cccccc;
+            border-radius: 4px;
         }
     }
 
