--- a/mcss/qui-modifiable-css.hbs
+++ b/mcss/qui-modifiable-css.hbs
@@ -74,19 +74,19 @@
     border-left: thin solid {{$lighten '-0.15'}};
 }
 
+{{!--
 .qui .nicklist .user, .qui .nick-menu {
     border: thin solid {{$lighten '-0.1'}};
 }
 
 .qui .nicklist .selected {
     color: {{$hex 'font'}};
-    border-bottom: thin solid {{$lighten '-0.15'}};
     background: #fff;
-}
 
-.qui .nicklist .selected-middle {
-    border-top: {{$lighten '-0.15'}} thin solid;
+    border-top: thin solid {{$lighten '-0.15'}};
+    border-bottom: thin solid {{$lighten '-0.15'}};
 }
+--}}
 
 .qui .dropdownmenu, .qui hr.lastpos {
     border: thin solid {{$lighten '-0.15'}};
