--- a/less/qwebirc/qui.less
+++ b/less/qwebirc/qui.less
@@ -19,10 +19,6 @@
         }
     }
 
-    .nick-menu {
-        max-width: 150px;
-    }
-
     .dropdownhint {
       position: relative;
       left: -500px;
@@ -203,11 +199,21 @@
         padding-left: 1px;
     }
 
-    .nick-menu ul {
-        margin: 0;
-        padding-left: 20px;
-        list-style-type: circle;
-        cursor:pointer;cursor:hand;
+
+    .nick-menu {
+        max-width: 150px;
+        
+        &.dropdownmenu .user {
+            padding-left: 4px;
+            font-weight: bold;
+        }
+
+        ul {
+            margin: 0;
+            padding-left: 20px;
+            list-style-type: circle;
+            cursor:pointer;cursor:hand;
+        }
     }
 
     .nicklist .menu {
