Use entypo instead of jQuery-icons

--- a/configure/index.tmpl
+++ b/configure/index.tmpl
@@ -14,6 +14,9 @@
     <link href="dist/css/bootstrap.css" rel="stylesheet">
     <link href="dist/css/qwebirc.css" rel="stylesheet">
   <!-- /build -->
+  <!-- build:process fonts -->
+  <link href="<%= getFileURL('entypo') %>" rel="stylesheet">
+  <!-- /build -->
   <!-- build:process modules -->
     <script src="<%= getFileURL('modules') %>"></script>
   <!-- /build -->
