--- a/templates/navbar.hbs
+++ b/templates/navbar.hbs
@@ -3,6 +3,6 @@
 </div>
 <div class="tabbar"></div>
 <div class="buttons">
-    <span class="to-left ui-icon ui-icon-circle-triangle-w hidden" name="tabscroll"></span>
-    <span class="to-right ui-icon ui-icon-circle-triangle-e hidden" name="tabscroll"></span>
+    <span class="to-left entypo hidden" name="tabscroll">&#59225;</span>
+    <span class="to-right entypo hidden" name="tabscroll">&#59226;</span>
 </div>
