--- a/less/qwebirc/detached-window.less
+++ b/less/qwebirc/detached-window.less
@@ -17,14 +17,15 @@
     }
     .header {
         padding: 4px 0;
-
-        .attach, .tab-close {
-            float:right;
-        }
         .title {
             padding-left: 10px;
             font-weight: bold;
             font-size: 16px;
+        }
+        
+        .controls .entypo {
+            font-size: 1.2em;
+            padding-right: 4px;
         }
     }
     .resize-handle {
@@ -34,6 +35,9 @@
         bottom: 0;
         right: 0;
         cursor: se-resize;
+
+        // transform: rotate(180deg);
+        // writing-mode: bt-rl;
     }
 }
 
