--- a/less/qwebirc/tabbar.less
+++ b/less/qwebirc/tabbar.less
@@ -26,6 +26,7 @@
 
         .tab {
             padding: 2px;
+            padding-right: 4px;
             cursor: default;
             margin-right: 3px;
             white-space: nowrap;
@@ -61,9 +62,8 @@
         }
 
         .detach, .tab-close {
-            vertical-align: middle;
-            padding-bottom: 3px;
-            display: inline-block;
+            font-size: 10px;
+            padding-left: 3px;
         }
     }
 }
