--- a/templates/detachedWindow.hbs
+++ b/templates/detachedWindow.hbs
@@ -2,12 +2,14 @@
     <div>
         <div class="header panel-heading">
             <span class='title'>{{channel}}</span>
-            {{#unless base}}{{> tabClose}}{{/unless}}
-            {{> tabAttach}}
+            <div class="controls pull-right">
+                {{> tabAttach}}
+                {{#unless base}}{{> tabClose}}{{/unless}}
+            </div>
         </div>
         <div class="body">
 
         </div>
-        <div><span class="resize-handle ui-icon ui-icon-grip-diagonal-se"></span></div>
+        <div><span class="resize-handle entypo">&#59202;</span></div>
     </div>
 </div>
