Correct extra_html path

--- a/configure/index.tmpl
+++ b/configure/index.tmpl
@@ -39,7 +39,7 @@
     </noscript>
   </div>
   <!-- build:process -->
-    <%= config.extra_html %>
+    <%= config.qwebirc_config.extra_html %>
   <!-- /build -->
 </body>
 </html>
