Checkout first channel if brouhaha isn't enabled
Fixesish #36 (hides it :))

--- a/less/qwebirc/tabbar.less
+++ b/less/qwebirc/tabbar.less
@@ -60,8 +60,13 @@
                 background: #d8d88a;
             }
         }
-
-        .detach, .tab-close {
+        
+        // too small imo at 10px
+        .tab-close {
+            font-size: 12px;
+            padding-left: 3px;
+        }
+        .detach {
             font-size: 10px;
             padding-left: 3px;
         }
