--- a/panes/options.hbs
+++ b/panes/options.hbs
@@ -118,7 +118,7 @@
                 <label class="control-label-inline">{{lang "option.NOTICE_SOUND"}}
                     <select class="form-control input-sm" id="beep_sound">
                         {{#each beep_sounds}}
-                        <option value="{{id}}">{{id}}</option>
+                        <option value="{{id}}" {{#equals beep_sound id}}selected{{/equals}}>{{id}}</option>
                         {{/each}}
                     </select>
                     <input type="button" value="{{lang "option.TEST"}}" id="sound-test">
