Fix offset on options page

--- a/less/qwebirc/panels.less
+++ b/less/qwebirc/panels.less
@@ -30,7 +30,7 @@
 
 
 //************* OPTIONS *****************
-.qwebirc .options {
+.qwebirc .window .options {
     padding-left: 25px;
     padding-top: 25px;
     overflow-y: scroll;
