--- a/panes/about.hbs
+++ b/panes/about.hbs
@@ -8,13 +8,9 @@
   </table>
 </div>
 <div class="container">
-  Copyright &copy; 2008-2011 Chris Porter and the qwebirc project.<br/>All rights reserved.<br/><br/>
-  Licensed under the GNU General Public License, version 2 only.
-  <p>
-    <a href="http://www.qwebirc.org/" target="_blank">http://www.qwebirc.org/</a><br/>
-  </p>
-  <p>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
-  <p>This software contains portions by the following third parties:</p>
+  This is a rewrite of <a href="http://qwebirc.org">Chris Porter's qwebirc</a> inspired by <a href="http://github.com/550/brouhaha">cinq's brouhaha</a> integrated with <a href="http://atheme.net/iris.html">Atheme's iris</a> for channel list supports.
+
+  By megawac &copy; 2013-2014. Source of the project or for file issues is <a href="https://github.com/megawac/qwebirc-enhancements">https://github.com/megawac/qwebirc-enhancements</a>. Cheers!
 
   <table class="alignleft" style="text-align: left">
     <tr>
@@ -44,18 +40,20 @@
           Beep sound -- made by Dreamcast on QuakeNet.<br/>
           Released into the public domain.
         </li>
-        <!-- <li>
-          MD5 implementation -- <a href="http://pajhome.org.uk/site/legal.html" target="_blank">http://pajhome.org.uk/site/legal.html</a>.<br/>
-          Copyright (C) Paul Johnston 1999 - 2000, BSD license.
-        </li> -->
-        <li>
-          Base64 functions -- <a href="http://www.webtoolkit.info" target="_blank">http://www.webtoolkit.info</a>.<br/>
-          No author name present on site.
-        </li>
       </td>
     </tr>
   </table>
 
   <p>Special thanks to various comments/suggestions/hardware/bug reports from Zarjazz, Bazerka, boojah, meeb, Microbe, morphium, Starman, truff, coekie, qip, soczol, tomaw, the muppets in #rogue (hi dunks!) and everyone else I forgot :(.</p>
+
+  
+  Copyright &copy; 2008-2011 Chris Porter and the qwebirc project.<br/>All rights reserved.<br/><br/>
+  Licensed under the GNU General Public License, version 2 only.
+  <p>
+    <a href="http://www.qwebirc.org/" target="_blank">http://www.qwebirc.org/</a><br/>
+  </p>
+  <p>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
+  <p>This software contains portions by the following third parties:</p>
+
   <input type="button" value="Close" data-event="close" class="btn btn-default btn-small" />
 </div>
