Input box and server notice styling

--- a/mcss/qui-modifiable-css.hbs
+++ b/mcss/qui-modifiable-css.hbs
@@ -39,6 +39,10 @@
     background: {{$hue '0.5'}} !important;
 }
 
+.qui .lines .server-notice {
+    background: {{$hue '-0.1'}} !important;
+}
+
 {{! tab stuff }}
 .qui .outertabbar, .qui .detached-window .header {
     color: {{$mix '0d0b0b' 'font'}};
@@ -114,9 +118,9 @@
 {{!pretty input}}
 
 .qwebirc .input .decorated {
+    background: {{$saturate '-0.15'}};
     {{! will be split using .split(',')}}
     {{#vendor-prefix '-webkit-,-moz-,-o-,-ms-,'}}
         background-image: {prefix}linear-gradient(bottom, {{$saturate '-0.10'}} 66%, {{$saturate '-0.15'}} 54%);
     {{/vendor-prefix}}
-    background: {{$saturate '-0.15'}};
 }
