IRC input gradient fix and sharper server notice hl

--- a/less/qwebirc/irc-colours.less
+++ b/less/qwebirc/irc-colours.less
@@ -150,7 +150,11 @@
     }
 }
 
-.lines .chan-notice, .lines .priv-notice {
+.lines .chan-notice, .lines .priv-notice  {
     background-color: yellow !important;
     font-weight: bold;
+}
+
+.lines .server-notice {
+    background: #FFD757;
 }
