Improve reactiveness of login form
Ping #48

--- a/less/qwebirc/loginbox.less
+++ b/less/qwebirc/loginbox.less
@@ -1,6 +1,6 @@
 .qwebirc .window .login {
     text-align: center;
-    width: 500px;
+    // width: 500px;
     margin: 0 auto 5px;
 
 
@@ -18,13 +18,11 @@
         margin: .5em 0;
     }
 
-    .right {
-        text-align: right;
-        margin-left: 15px; /*seems to center it*/
-    }
-
-    .right input {
-        width: 200px;
+    .login-field {
+        margin: 0 auto;
+        input {
+            width: 200px;
+        }
     }
 
     input {
