--- a/panes/about.hbs
+++ b/panes/about.hbs
@@ -8,9 +8,9 @@
   </table>
 </div>
 <div class="container">
-  This is a rewrite of <a href="http://qwebirc.org">Chris Porter's qwebirc</a> inspired by <a href="http://github.com/550/brouhaha">cinq's brouhaha</a> integrated with <a href="http://atheme.net/iris.html">Atheme's iris</a> for channel list supports.
+  <p>This is a rewrite of <a href="http://qwebirc.org">Chris Porter's qwebirc</a> inspired by <a href="http://github.com/550/brouhaha">cinq's brouhaha</a> integrated with <a href="http://atheme.net/iris.html">Atheme's iris</a> for channel list supports.</p>
 
-  By megawac &copy; 2013-2014. Source of the project or for file issues is <a href="https://github.com/megawac/qwebirc-enhancements">https://github.com/megawac/qwebirc-enhancements</a>. Cheers!
+  <p>By megawac &copy; 2013-2014. Source of the project or for file issues is <a href="https://github.com/megawac/qwebirc-enhancements">https://github.com/megawac/qwebirc-enhancements</a>. Cheers!</p>
 
   <table class="alignleft" style="text-align: left">
     <tr>
@@ -46,7 +46,7 @@
 
   <p>Special thanks to various comments/suggestions/hardware/bug reports from Zarjazz, Bazerka, boojah, meeb, Microbe, morphium, Starman, truff, coekie, qip, soczol, tomaw, the muppets in #rogue (hi dunks!) and everyone else I forgot :(.</p>
 
-  
+
   Copyright &copy; 2008-2011 Chris Porter and the qwebirc project.<br/>All rights reserved.<br/><br/>
   Licensed under the GNU General Public License, version 2 only.
   <p>
