More prominent topic messages

--- a/less/qwebirc/qui.less
+++ b/less/qwebirc/qui.less
@@ -61,7 +61,7 @@
     }
 
     .channel .content {
-        top: 15px;
+        top: 19px;
     }
 
     .show-nicklist .leftpanel {
@@ -142,7 +142,7 @@
 
     .topic {
         padding-left: 5px;
-        font-size: 0.7em;
+        font-size: 13px;
         cursor: default;
 
         .emptytopic {
