Change brouhaha styling; resolves #11

--- a/mcss/qui-modifiable-css.hbs
+++ b/mcss/qui-modifiable-css.hbs
@@ -104,11 +104,11 @@
 
 {{!custom brouhaha styling}}
 .qui .brouhaha .content, .qui .brouhaha .dropdownmenu {
-    background: {{$saturate '-0.10'}};
+    background: {{$hue '-0.10'}};
 }
 
 .qui .brouhaha .properties, .qui .brouhaha .input {
-    background: {{$saturate '-0.6'}};
+    background: {{$hue '-0.96'}};
 }
 
 {{!pretty input}}
