Attempt rewrite of style parsing
(various fixes and improvements)

--- a/less/qwebirc/irc-colours.less
+++ b/less/qwebirc/irc-colours.less
@@ -1,143 +1,143 @@
 /*Highlighting*/
 .lines, .colourline {
 
-    .col0 {
+    .irc-fg0 {
         color: white;
     }
 
-    .col1 {
+    .irc-fg1 {
         color: black;
     }
 
-    .col2 {
+    .irc-fg2 {
         color: darkBlue;
     }
 
-    .col3 {
+    .irc-fg3 {
         color: darkGreen;
     }
 
-    .col4 {
+    .irc-fg4 {
         color: red;
     }
 
-    .col5 {
+    .irc-fg5 {
         color: darkRed;
     }
 
-    .col6 {
+    .irc-fg6 {
         color: purple;
     }
 
-    .col7 {
+    .irc-fg7 {
         color: orange;
     }
 
-    .col8 {
+    .irc-fg8 {
         color: yellow;
     }
 
-    .col9 {
+    .irc-fg9 {
         color: green;
     }
 
-    .col10 {
+    .irc-fg10 {
         color: teal;
     }
 
-    .col11 {
+    .irc-fg11 {
         color: cyan;
     }
 
-    .col12 {
+    .irc-fg12 {
         color: blue;
     }
 
-    .col13 {
+    .irc-fg13 {
         color: fuchsia;
     }
 
-    .col14 {
+    .irc-fg14 {
         color: dimGray;
     }
 
-    .col15 {
+    .irc-fg15 {
         color: lightGray;
     }
 
-    .back0 {
+    .irc-bg0 {
         background-color: white;
     }
 
-    .back1 {
+    .irc-bg1 {
         background-color: black;
     }
 
-    .back2 {
+    .irc-bg2 {
         background-color: darkBlue;
     }
 
-    .back3 {
+    .irc-bg3 {
         background-color: darkGreen;
     }
 
-    .back4 {
+    .irc-bg4 {
         background-color: red;
     }
 
-    .back5 {
+    .irc-bg5 {
         background-color: darkRed;
     }
 
-    .back6 {
+    .irc-bg6 {
         background-color: purple;
     }
 
-    .back7 {
+    .irc-bg7 {
         background-color: orange;
     }
 
-    .back8 {
+    .irc-bg8 {
         background-color: yellow;
     }
 
-    .back9 {
+    .irc-bg9 {
         background-color: green;
     }
 
-    .back10 {
+    .irc-bg10 {
         background-color: teal;
     }
 
-    .back11 {
+    .irc-bg11 {
         background-color: cyan;
     }
 
-    .back12 {
+    .irc-bg12 {
         background-color: blue;
     }
 
-    .back13 {
+    .irc-bg13 {
         background-color: fuchsia;
     }
 
-    .back14 {
+    .irc-bg14 {
         background-color: dimGray;
     }
 
-    .back15 {
+    .irc-bg15 {
         background-color: lightGray;
     }
 
-    .bold {
+    .irc-bold {
         font-weight: bold;
     }
 
-    .underline {
+    .irc-underline {
         text-decoration: underline;
     }
 
-    .italic {
+    .irc-italic {
         font-style:italic
     }
 
