--- a/templates/ircstyle.hbs
+++ b/templates/ircstyle.hbs
@@ -1,1 +1,3 @@
-<span class="{{background}} {{colour}} {{style}}">{{{text}}}</span>{{! Note needs to be a safe string or urls will be escaped }}
+{{! Note needs to be a safe string or urls will be escaped }}
+<span class="{{style}}">{{{text}}}</span>
+
