Fixes #65; Improve url formatter

--- a/templates/customlink.hbs
+++ b/templates/customlink.hbs
@@ -1,1 +1,1 @@
-<a class="{{#if internal}}internal{{/if}}" href="{{val}}">{{val}}</a>
+<a class="{{#if internal}}internal{{/if}}" href="{{link}}">{{val}}</a>
