Escape text before rendering

--- a/templates/customlink.hbs
+++ b/templates/customlink.hbs
@@ -1,1 +1,1 @@
-<a class="{{#if internal}}internal{{/if}}" href="{{link}}">{{val}}</a>
+<a href="{{{link}}}" {{#if internal}}class="internal"{{/if}} {{#if nofollow}}rel='nofollow'{{/if}} {{#if target}}target="{{target}}"{{/if}}>{{{val}}}</a>
