--- a/templates/ircstyle.hbs
+++ b/templates/ircstyle.hbs
@@ -1,3 +1,2 @@
 {{! Note needs to be a safe string or urls will be escaped }}
-<span class="{{style}}">{{{text}}}</span>
-
+<span class="{{{style}}}">{{{text}}}</span>
